app/assets/stylesheets/home.css.scss
footer {
  background: #2b2d2e;
  color: #fff;
  padding: 3em 0;
  .social {
    li {
      padding: 4%;
      line-height: 140%;
    }
  }
  i.fa-2x {
    font-size: 2.5em;
  }
}

.max-width {
  max-width:100%;
}

.destination-item:hover {
  img {
    filter: grayscale(25%);
    -webkit-filter: grayscale(25%);
    -moz-filter: grayscale(25%);
    -ms-filter: grayscale(25%);
    -o-filter: grayscale(25%);
  }
  .destination-name {
    display: block
  }
}
.destination-item {
  position: relative;
}

.destination-name {
  display: none;
  font-size: 4em;
  letter-spacing: 5px;
  color: white;
  text-shadow: 0px 0px 6px white, 0px 0px 3px black;
  position: absolute;
  top:0px;
  bottom:0px;
  margin: auto;
  height:440px;
  width:100%;
  padding-top: 13%;
  small {
    font-size: 26px;
    font-weight: 300;
  }
}

#homeblock, .fullpage, .homepage_story {
  height: 100%;
}

.vcenter{
  display: inline-block;
  vertical-align: middle;
  float: none;
}
.logo-item {
  img {
    max-width: 100%;
  }
}

.title {
  padding: 10px;
}

div.homepage_story {
  background-image: image-url("lonely.jpg");
  background-size: cover;
  background-position: center top;
  background-attachment: fixed;
  // color: #238BFF;
  padding-top: 56px;

  .story {
    color: white;
    // height: 800px;
  }
  h2 {
  // text-align: center;
  // color: white;
  // text-shadow: 0px 0px 3px white, 0px 0px 6px black;
  // padding-bottom: 30px;
  }

  h3 {
    padding-bottom: 40px;
  }

  h4 {
    color: white;
    font-weight: 300;
  }

  a {
    color: white;
    text-size: 16px;
  }
}

.hp-section{
  background:white;
  padding: 10px 0px 0px 0px;
  h2 {
    color: black;
    text-shadow: none;
  }
  p {
    letter-spacing: .01rem;
    font-weight: 300;
    font-style: normal;
    font-size: 20px;
    line-height: 1.5;
  }

  .how-header {
    i {
      font-size: 8em;
      color: #0086B8;
    }
  }
  .how-content{
    letter-spacing: .01rem;
    font-weight: 300;
    font-style: normal;
    font-size: 20px;
    line-height: 1.5;
  }
}

#social_links {
  a {
  color: lightgrey;
  padding: 5px;
  }
}


#homeblock {
  padding-top: 10%;
  padding-bottom: 15%;
}

#homeblock {

  .form-group{
    margin: 10px auto;
    padding-top:20px;
  }

  h1 {
    color: white;
    text-shadow: 0px 0px 4px white, 0px 0px 2px black;
    font-size: 60px;
    padding-bottom: 0px;
    font-weight: 700;
  }
  h3, h4 {
    color: white;
    padding-bottom: 0px;
    font-weight: 300;
    a {
      padding-left: 14px;
      padding-right: 14px;
    }
  }
  h3 {
    font-size: 22px;
  }

  #references-logos {
    width: 75%;
    background: white;
    border-radius: 15px;
    padding: 3px 10px;
  }

  .minor-block {
    font-size: 1.5em;
    font-weight: 300;
    color: black;
  }

  p {
    color: lightgrey;
    font-style: oblique;
    font-size: 300;
  }

  .btn-major {
    font-size: 16px;
    width: 150px;
    height: 50px;
    font-weight: 700;
  }

  .btn {
    font-size: 20px;
    font-weight: 500;
    // font-variant: small-caps;
  }

  .row {
    margin-left: 0px;
    margin-right: 0px;
  }

  .box-content {
    background: rgba(0, 0, 0, 0.3);
    color: white;
    height: 105px;
    padding: 5px;
    margin: 10px;
    font-weight: 100;

    p {
      color: white;
    }
  }

}

.tr-grey-bg {
  background: rgba(0,0,0,0);
  padding-bottom: 0px;
  margin: 10px auto;
  a {
    white-space: normal;
  }

  input#trip_query {
    font-style: normal;
    font-weight: 300;
    width: 300px;
  }
}

.trending {
  h4 {
    color: white;
  }
  a {
    padding-left: 14px;
    padding-right: 14px;
    font-style: italic;
    font-size: 18px;
    text-shadow: 0px 0px 20px white, 0px 0px 10px black;
  }
  i {
    font-size: 18px;
    text-shadow: 0px 0px 20px white, 0px 0px 10px black;
  }
}

.explanation-hp {
  padding-left: 100px;
  padding-right: 100px;
}

.explanation-box {
  color: white;
  size: 15px;
}

.arrow-down {
  position: absolute;
  bottom: 0px;
  width: 100%;
  i.fa {
    color: white;
    font-size: 80px;
    font-weight: 100;
  }
}

#homepage-content {
  background: rgba(0,0,0,0.5);
  padding: 35px;
}

.img-responsive {
  margin: 0 auto;
  height: 150px;
}

.feature {
  padding: 10px;
  background: transparent;
  border-radius: 10px;
  margin: 15px;
  color: lightgrey;
}

@media screen and (max-width: 999px) {
  .homepage_story .fullpage div i.fa-angle-down {
    display: none;
  }
  .explanation-hp {
    padding-left: 25px;
    padding-right: 25px;
  }
}

@media screen and (max-width: 500px) {
  #homeblock {
    h1 {
      font-size: 34px;
    }
    #references-logos {
      width: 100%;
    }

    .minor-block {
      font-size: 1.4em;
    }
    input#trip_query {
      width: 80%;
    }
    .fb-like {
      display: none;
    }
    p {
      color: white;
      font-style: oblique;
      font-size: 300;
    }
  }
  .destination-name {
    display: block;
    font-size: 1.5em;
    padding-top: 43%;
  }
}

